# RetDec-Config-Patch

./: .gitignore  README.md  cli.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/workflows/: deploy-package.yml  publish-package-dev.yml  publish-package.yml  run-tests-on-main.yml  run-tests-on-release.yml  run-tests.yml
retdec_config_patch/: checks.py  cli.py  config.py  decompiler.py  misc.py  paths.py
test-files/: multi-process-test.sh  my-custom-config-2.json  my-custom-config.json
test-files/cmp/: cmp
tests/: test_checks.py  test_config.py  test_paths.py
