[tool.poetry]
name = "retdec-config-patch"
version = "0.0.1.dev5"
description = "Patch for the broken `--config` option in `retdec-decompiler`"
license = "MIT"
authors = [
    "PhotonicGluon <25820201+PhotonicGluon@users.noreply.github.com>"
]
readme = "README.md"
exclude = [
    "retdec_config_patch/config.json"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.1.7"
colorama = "~0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/PhotonicGluon/RetDec-Config-Patch"
Issues = "https://github.com/PhotonicGluon/RetDec-Config-Patch/issues"

[tool.poetry.scripts]
retdec-config-patch = "retdec_config_patch.cli:set_up_patch"
undo-retdec-config-patch = "retdec_config_patch.cli:undo_patch"
retdec-decompiler-patched = "retdec_config_patch.cli:retdec_decompiler_patched"
